2007-05-24 Igor Zelmanovich <igorz@mainsoft.com>

	* Menu.cs: fixed: alt attribute is rendered as well.

2007-05-07 Igor Zelmanovich <igorz@mainsoft.com>

	* FormView.cs: fixed:
	avoid NullReferenceException when used EditTemplate w/o binding 
	directive such Eval or Bind.	 

2007-05-03  Marek Habersack  <mhabersack@novell.com>

	* TreeNode.cs: correct version of the fix in r76488. Nodes
	retrieved from a navigation data source which have empty URL will
	not be selectable.

	* TreeView.cs: revert r76488, it wasn't entirely correct. I need
	to investigate the special cases it solved a bit more.

2007-05-03 Igor Zelmanovich <igorz@mainsoft.com>

	* ControlPropertyNameConverter.css:
	* FontUnitConverter.cs:
	* UnitConverter.cs:
	* ValidatedControlConverter.cs:			
	added missing API.	

2007-05-02 Igor Zelmanovich <igorz@mainsoft.com>

	* SqlDataSourceView.cs:
	make CancelSelectOnNullParameter property works.

2007-04-19 Igor Zelmanovich <igorz@mainsoft.com>

	* ChangePassword.cs:
	does not accept invalid new password.	

2007-04-18  Igor Zelmanovich  <igorz@mainsoft.com>

	* Xml.cs:
	* XmlDataSource.cs:
	added MonoLimitation attributes		

2007-04-18  Igor Zelmanovich  <igorz@mainsoft.com>

	* BaseValidator.cs: for TARGET_J2EE: 
	used Page.Request.Browser to determine RenderUplevel

2007-04-12 Igor Zelmanovich <igorz@mainsoft.com>

	* GridView.cs:
	when databound with AutoGenerateColumns = true, 
	data source enumerator created only once.	

2007-04-18  Marek Habersack  <mhabersack@novell.com>

	* SiteMapDataSource.cs: query the site map for the current node
	when configured to use it as the start point. Fixes bug #81376,
	patch from Mike Morano <mmorano@mikeandwan.us>.

	* Calendar.cs: change year/month format to be culture aware. Fix
	for bug #81390. Patch submitted by Atsushi Enomoto
	<atsushi@ximian.com>

2007-04-17  Daniel Nauck  <dna@mono-project.de>

	* PasswordRecovery.cs: fixed typo (AnswerLabel.Text).

2007-04-17  Marek Habersack  <mhabersack@novell.com>
