@@ -1,3 +1,9 @@
+2007-05-27 Igor Zelmanovich <igorz@mainsoft.com>
+
+	* ObjectDataSourceViewTest.cs:
+	* SqlDataSourceViewTest.cs:
+	new tests were added.	
+
 2007-04-07  Gert Driesen  <drieseng@users.sourceforge.net>
 
 	* UnitTest.cs: Added test for unit value with no integral part. Code
